--- a/assets/css/templatemo-hexashop.css
+++ b/assets/css/templatemo-hexashop.css
@@ -113,93 +113,12 @@ p {
 global styles
 --------------------------------------------- 
 */
-html,
-body {
-  background: #fff;
-  font-family: 'Poppins', sans-serif;
-}
 
-::selection {
-  background: #2a2a2a;
-  color: #fff;
-}
-
-::-moz-selection {
-  background: #2a2a2a;
-  color: #fff;
-}
-
-@media (max-width: 991px) {
-  html, body {
-    overflow-x: hidden;
-  }
-  .mobile-top-fix {
-    margin-top: 30px;
-    margin-bottom: 0px;
-  }
-  .mobile-bottom-fix {
-    margin-bottom: 30px;
-  }
-  .mobile-bottom-fix-big {
-    margin-bottom: 60px;
-  }
-}
-
-.main-border-button a {
-  font-size: 13px;
-  color: #fff;
-  border: 1px solid #fff;
-  padding: 12px 25px;
-  display: inline-block;
-  font-weight: 500;
-  transition: all .3s;
-}
-
-.main-border-button a:hover {
-  background-color: #fff;
-  color: #2a2a2a;
-}
-
-.main-white-button a {
-  font-size: 13px;
-  color: #2a2a2a;
-  background-color: #fff;
-  padding: 12px 25px;
-  display: inline-block;
-  border-radius: 3px;
-  font-weight: 600;
-  transition: all .3s;
-}
-
-.main-white-button a:hover {
-  opacity: 0.9;
-}
-
-.main-text-button a {
-  font-size: 13px;
-  color: #fff;
-  font-weight: 600;
-  transition: all .3s;
-}
-
-.main-text-button a:hover {
-  opacity: 0.9;
-}
-
-.section-heading h2 {
-  font-size: 34px;
-  font-weight: 700;
-  color: #2a2a2a;
-}
-
-.section-heading span {
-  font-size: 14px;
-  color: #a1a1a1;
-  font-style: italic;
-  font-weight: 400;
-}
-
-
+/*
+---------------------------------------------
+  Custom Stlyes
+---------------------------------------------
+*/
 
 /* 
 ---------------------------------------------
