--- a/assets/css/templatemo-hexashop.css
+++ b/assets/css/templatemo-hexashop.css
@@ -1773,6 +1773,7 @@ Single Product Page
 .total .main-border-button a {
   border-color: #2a2a2a;
   color: #2a2a2a;
+
 }
 
 .total .main-border-button a:hover {
@@ -1844,7 +1845,8 @@ About Us Page
 .about-page-heading {
   margin-top: 160px;
   margin-bottom: 30px;
-  background-image: url(../images/about-us-page-heading.jpg);
+
+  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../images/contact2.png);
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -1917,7 +1919,7 @@ About Us Page
   width: 44px;
   height: 44px;
   background-color: #2a2a2a;
-  color: #fff;
+  color: #00008E;
   display: inline-block;
   text-align: center;
   line-height: 44px;
