--- a/assets/css/owl-carousel.css
+++ b/assets/css/owl-carousel.css
@@ -184,3 +184,7 @@
   z-index: 1;
   height: 100%;
   width: 100%; }
+/*=== Import Raleway fonts ===*/
+@import url(http://fonts.googleapis.com/css?family=Raleway:400,700);
+
+
