--- a/assets/css/templatemo-hexashop.css
+++ b/assets/css/templatemo-hexashop.css
@@ -37,7 +37,7 @@ reset
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, div
 pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q,
 s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li,
-figure, header, nav, section, article, aside, footer, figcaption {
+figure, header:not(#ImgCart), nav, section, article, aside, footer, figcaption {
   margin: 0;
   padding: 0;
   border: 0;
@@ -71,7 +71,7 @@ ul, li {
   list-style: none;
 }
 
-header, nav, section, article, aside, footer, hgroup {
+header:not(#ImgCart), nav, section, article, aside, footer, hgroup {
   display: block;
 }
 
@@ -126,7 +126,7 @@ header
 --------------------------------------------- 
 */
 
-.background-header {
+.background-header:not(#ImgCart) {
   border-bottom: none !important;
   background-color: #fff;
   height: 80px!important;
