cart, single page

--- a/assets/css/templatemo-hexashop.css
+++ b/assets/css/templatemo-hexashop.css
@@ -1659,7 +1659,7 @@ Single Product Page
 }
 
 #product .left-images img {
-  width: 100%;
+  width: 70%;
   overflow: hidden;
   margin-bottom: 30px;
 }
@@ -1768,6 +1768,12 @@ Single Product Page
 
 .total .main-border-button {
   text-align: right;
+  
+}
+.thumb{
+  box-shadow: -3px 13px 28px -17px rgba(0,0,0,0.75);
+  -webkit-box-shadow: -3px 13px 28px -17px rgba(0,0,0,0.75);
+  -moz-box-shadow: -3px 13px 28px -17px rgba(0,0,0,0.75);
 }
 
 .total .main-border-button a {
