--- a/account/css/style.css
+++ b/account/css/style.css
@@ -202,7 +202,8 @@ body {
   color: #222;
   background: #f8f8f8;
   font-weight: 400;
-  font-family: Poppins; }
+  font-family: Poppins; 
+}
 
 .container {
   width: 900px;
